--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,7 +41,8 @@ jobs:
         #service_account: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CARTA_C98E1 }}'
 
     - name: Deploy functions
-      run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
+      # run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
+      run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }}
 
     # Example of using the output
     - id: 'test'
