--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,8 +41,8 @@ jobs:
         service_account: '${{ secrets.SERVICE_ACCOUNT }}'
 
     - name: Deploy functions
-      # run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
-      run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }}
+      run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
+      # run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }}
 
     # Example of using the output
     - id: 'test'
