--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,8 +43,7 @@ jobs:
 
     - name: Deploy functions
       # run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
-      # run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }}
-      run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --service-account '${{ secrets.SERVICE_ACCOUNT }}'
+      run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }}
 
 
     # Example of using the output
