--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,8 +44,15 @@ jobs:
     - name: Deploy functions
       # run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
       run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }}
+      env:
+          FIREBASE_TOKEN: use_application_default_credentials
 
 
     # Example of using the output
     - id: 'test'
       run: 'curl "${{ steps.deploy.outputs.url }}"'
+
+
+      gcloud projects add-iam-policy-binding $PROJECT_ID \
+  --member="serviceAccount:$GH_SVC_ACCOUNT_EMAIL" \
+  --role="roles/firebaseextensions.viewer"
