--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,13 +44,11 @@ jobs:
     - name: Run Unit Tests
       run: cd functions && npm run test
 
-    - name: Run Unit Tests
+    - name: Run Lint Codebase
       run: cd functions && npm run lint
 
     - name: Deploy functions
-      # run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
       run: firebase deploy --only functions --project ${{ secrets.PROJECT_ID }}
-
 
     # Example of using the output
     - id: 'test'
