--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,8 @@ run-name: ${{ github.actor }} launched the Build-and-Test workflow 🚀
 on:
   pull_request:
     branches: ["dev", "master"]
-  # push:
-  #   branches: ["dev", "master"]
+  push:
+    branches: ["dev", "master"]
 
 
 permissions:
